Index posts working
Show list of posts with title, author and body

--- a/assets/scripts/templates/post-listing.handlebars
+++ b/assets/scripts/templates/post-listing.handlebars
@@ -13,6 +13,10 @@
         Anonymous.
       {{/if}}
     </p>
+    <h6>Body:</h6>
+    <h3>
+      {{post.body}}
+    </h3>
       {{> remove-post id=post.id}}
   </section>
 
