Add Edit button to post

--- a/assets/scripts/templates/post-listing.handlebars
+++ b/assets/scripts/templates/post-listing.handlebars
@@ -18,6 +18,7 @@
         {{post.body}}
       </h3>
         {{> remove-post id=post.id}}
+        {{> edit-post id=post.id}}
     </section>
   {{/if}}
 {{/each}}
