--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,7 +1,21 @@
 @import '~bootstrap/scss/bootstrap';
-#footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 60px;
+
+html,
+body {
+  height: 100%;
+}
+
+.page-content {
+  flex: 1 0 auto;
+}
+
+.sticky-footer {
+  flex-shrink: none;
+}
+
+/* Other Classes for Page Styling */
+
+body {
+  background: #007bff;
+  background: linear-gradient(to right, #0062E6, #33AEFF);
 }
