Show all posts on homepage
Removed handlebars code:  {{#if post.editable}} {{/if}}

--- a/assets/scripts/templates/post-listing.handlebars
+++ b/assets/scripts/templates/post-listing.handlebars
@@ -1,24 +1,19 @@
 {{#each posts as |post|}}
-  {{#if post.editable}}
-    <section data-id="{{post.id}}">
-      <h6>Title:</h6>
-      <h3 class='title'>
-        {{post.title}}
-      </h3>
-      <h6>Author:</h6>
-      <p class='author'>
-        {{#if post.author}}
-          {{post.author}}
-        {{else}}
-          Anonymous.
-        {{/if}}
-      </p>
-      <h6>Body:</h6>
-      <h3 class='body'>
-        {{post.body}}
-      </h3>
-        {{> remove-post id=post.id}}
-        {{> edit-post id=post.id}}
-    </section>
-  {{/if}}
+  <div data-id="{{post.id}}" class="box">
+    <h2 class='title'>
+      {{post.title}}
+    </h2>
+    <h3 class='author'>
+      {{#if post.author}}
+        {{post.author}}
+      {{else}}
+        Anonymous.
+      {{/if}}
+    </h3>
+    <p class='body'>
+      {{post.body}}
+    </p>
+      {{> remove-post id=post.id}}
+      {{> edit-post id=post.id}}
+  </div>
 {{/each}}
