--- a/assets/scripts/templates/post-form.handlebars
+++ b/assets/scripts/templates/post-form.handlebars
@@ -1,4 +1,4 @@
-<form>
+<form class="create-form">
   <fieldset>
     <legend>Create something :)</legend>
     <label>Title:</label>
@@ -10,6 +10,6 @@
     <label>Body:</label>
     <textarea name='body' placeholder="here goes nothing!"></textarea>
     <br>
-    <input type='submit' class='create-or-edit-post-submit' value='submit post!'>
+    <button class='create-or-edit-post-submit' value='submit post!'>Submit Post</button>
   </fieldset>
 </form>
