Create and Read All working successfully
Now todo: Read Some, Update, and Delete

--- a/assets/scripts/templates/post-form.handlebars
+++ b/assets/scripts/templates/post-form.handlebars
@@ -10,6 +10,6 @@
     <label>Body:</label>
     <textarea name='body' placeholder="here goes nothing!"></textarea>
     <br>
-    <button class='create-or-edit-post-submit' value='submit post!'>Submit Post</button>
+    <input type='submit' value='Submit Post'>
   </fieldset>
 </form>
