Show edit and delete buttons only in 'my posts'

--- a/assets/scripts/templates/post-listing.handlebars
+++ b/assets/scripts/templates/post-listing.handlebars
@@ -13,7 +13,9 @@
     <p class='body'>
       {{post.body}}
     </p>
-      {{> remove-post id=post.id}}
-      {{> edit-post id=post.id}}
+      {{#if post.editable}}
+        {{> remove-post id=post.id}}
+        {{> edit-post id=post.id}}
+      {{/if}}
   </div>
 {{/each}}
