Finish CRRRUD MVP
No console.logs other than the error.
User gets messaged with actions.

--- a/assets/scripts/templates/post-form-create.handlebars
+++ b/assets/scripts/templates/post-form-create.handlebars
@@ -8,7 +8,7 @@
     <input name='author' type='text' placeholder="name/alias/historical figure">
     <br>
     <label>Body:</label>
-    <textarea name='body' placeholder="here goes nothing!"></textarea>
+    <textarea name='body' placeholder="here goes nothing!" rows="5"></textarea>
     <br>
     <input type='submit' value='Submit Post'>
   </fieldset>
