Reset all form fields when using post functionality

--- a/assets/scripts/templates/post-form-create.handlebars
+++ b/assets/scripts/templates/post-form-create.handlebars
@@ -2,13 +2,13 @@
   <fieldset>
     <legend>Create something :)</legend>
     <label>Title:</label>
-    <input name='title' type='text' placeholder="title">
+    <input name='title' type='text' placeholder="title" required>
     <br>
     <label>Author:</label>
     <input name='author' type='text' placeholder="name/alias/historical figure">
     <br>
     <label>Body:</label>
-    <textarea name='body' placeholder="here goes nothing!" rows="5"></textarea>
+    <textarea name='body' placeholder="here goes nothing!" rows="5" required></textarea>
     <br>
     <input type='submit' value='Submit Post'>
   </fieldset>
