--- a/assets/scripts/templates/post-form-update.handlebars
+++ b/assets/scripts/templates/post-form-update.handlebars
@@ -2,13 +2,13 @@
   <fieldset>
     <legend>Edit your post :)</legend>
     <label>Title:</label>
-    <input name='title' type='text' placeholder="title" value="{{post.title}}">
+    <input name='title' type='text' placeholder="title" value="{{post.title}}" required>
     <br>
     <label>Author:</label>
     <input name='author' type='text' placeholder="name/alias/historical figure" value="{{post.author}}">
     <br>
     <label>Body:</label>
-    <textarea name='body' placeholder="here goes nothing!" rows="5">{{post.body}}</textarea>
+    <textarea name='body' placeholder="here goes nothing!" rows="5" required>{{post.body}}</textarea>
     <br>
     <input type='submit' value='Submit Post'>
   </fieldset>
