--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -25,9 +25,15 @@ main {
 }
 
 h1 {
-  background-image: url('public/Mount_Everest_as_seen_from_Drukair2_PLW_edit.jpg');
-  font-size: 100px;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('public/chomolungma.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  font-size: 70px;
+  color: white;
   font-family: 'Macondo Swash Caps';
+  padding: 80px 120px 120px 40px;
 }
 
 .box {
