Style looking fresh!

--- a/assets/scripts/templates/post-form-update.handlebars
+++ b/assets/scripts/templates/post-form-update.handlebars
@@ -1,4 +1,4 @@
-<form class="update-form">
+<form class="update-form form-group">
   <fieldset>
     <legend>Edit your post :)</legend>
     <label>Title:</label>
