--- a/assets/scripts/templates/post-form-create.handlebars
+++ b/assets/scripts/templates/post-form-create.handlebars
@@ -1,4 +1,4 @@
-<form class="create-form">
+<form class="create-form form-group">
   <fieldset>
     <legend>Create something :)</legend>
     <label>Title:</label>
