--- a/assets/scripts/templates/edit-post.handlebars
+++ b/assets/scripts/templates/edit-post.handlebars
@@ -1,1 +1,1 @@
-<button class='btn btn-sm btn-primary edit-post' data-id="{{id}}">Edit</button>
+<button class='btn btn-sm btn-dark edit-post' data-id="{{id}}">Edit</button>
